--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.parent{
   display: flex;
   flex-direction: column;
+  row-gap: 10px;
+}
+.row1{
+  text-align: center;
+  column-gap: 10px;
+}
+.row2{
+  display: flex;
+  column-gap: 10px;
+}
+.row3{
+  display: flex;
+  column-gap: 10px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.dropdown{
+  display: flex;
+  flex-direction: row;
+  column-gap: 5px;
+  padding: 10px 10px;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 50px;
+  background-color: rgb(223, 223, 223);
 }
+.child1{
+  border: 1px solid rgb(212, 212, 212);
+  padding: 5px;
+  height: 300px;
+  width: 50%;
+}
+.child2{
+  border: 1px solid rgb(212, 212, 212);
+  padding: 5px;
+  height: 300px;
+  width: 50%;
+}
+.child3{
+  border: 1px solid rgb(212, 212, 212);
+  padding: 5px;
+  height: 300px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
