--- a/app/src/App.css
+++ b/app/src/App.css
@@ -36,7 +36,7 @@
 .child2{
   border: 1px solid rgb(212, 212, 212);
   padding: 5px;
-  height: 300px;
+  height: 400px;
   width: 50%;
 }
 .child3{
@@ -44,4 +44,17 @@
   padding: 5px;
   height: 300px;
 
+}
+g.legend-axis path {
+  display: none; /* Hide axis line.. */
+}
+.legend-axis {
+  line-height: 10em;
+
+  letter-spacing: 0.1em; /* Increase spacing between numbers */
+
+}
+
+.color-bar{
+  
 }
