Child 1 (Bar Chart) Commit
Added all the logic for the bar chart refactoring code for an old homework assignment. Pretty sure all the logic is there, I need to finalize the styling still though to match the project criteria.

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -55,6 +55,16 @@ g.legend-axis path {
 
 }
 
+.radio-container {
+  display: flex;
+  justify-content: center; /* Center items horizontally */
+}
+
+.radio {
+  margin-right: 10px; /* Add margin between radio options */
+}
+
+
 .color-bar{
   
 }
