--- a/app/src/App.css
+++ b/app/src/App.css
@@ -28,9 +28,11 @@
   background-color: rgb(223, 223, 223);
 }
 .child1{
+  display: flex;
+  justify-content: center;
   border: 1px solid rgb(212, 212, 212);
   padding: 5px;
-  height: 300px;
+  height: 400px;
   width: 50%;
 }
 .child2{
