--- a/app/src/App.css
+++ b/app/src/App.css
@@ -40,11 +40,16 @@
   padding: 5px;
   height: 400px;
   width: 50%;
+  display: flex;
+  justify-content: center;
 }
 .child3{
   border: 1px solid rgb(212, 212, 212);
   padding: 5px;
-  height: 300px;
+  height: 360px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 
 }
 g.legend-axis path {
